headphones/7-styles.css
/* General reset */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
body {
  /* color: #fff; */
  
}

/* Header */
.header {
  background-image: url(images/headphones_hero_1.jpg);
  height: 100vh;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

.container {
  margin: 0 auto;
  max-width: 50%;
  padding: 0 20px;
}
.nav {
  display: flex;
  justify-content: space-between;
  padding-top: 10px;
}

.home {
  text-decoration: none;
  font-size: 25px;
}

.nav-links {
  font-size: 25px;
  margin-right: 10px;
  justify-content: space-between;
}
.nav-links a {
  color: #fff;
  text-decoration: none;
  margin-right: 10px;
}

.hero-section-div {
margin-top: 200px;
text-align: center;
color: white;
}

.hero-section-div1 h1 {
  font-size: 80px;
  font-weight: bold;
}
.hero-section-div1 p {
  font-size: 30px;
}
.cta-button {
  width: 20%;
  height: 50px;
  margin: 30px;
  border-radius: 35px;
  background-color: #FF6565;
  border-color: none;
}
.cta-button-link {
  text-decoration: none;
  color: #fff;
}

/* Main Section */

/* What We Do */
.what-we-do {
  margin-top: 70px;
  margin-bottom: 70px;
}

.what-we-do-section-div1 {
  display: flex;
  flex-direction: column;
  text-align: center;
}
.what-we-do-section-div1 h2 {
  font-size: 50px;
  font-weight: bold;
  margin-bottom: 30px;
  
}

